--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "node-mocks-http": "1.9.0",
     "nodemon": "2.0.4",
     "sequelize-cli": "6.2.0",
-    "ts-node": "9.0.0",
+    "ts-node": "^9.0.0",
     "typescript": "4.0.3"
   }
 }
