--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ FRONTEND_URL_WITH_SUBDOMAIN="http://[subdomain].localhost:<port>"
 
 # Backend URL with /api
 # Ex.: http://localhost:8080/api
-BACKEND_URL="http://localhost:8765/api"
+BACKEND_URL="https://barber-admin-backend.herokuapp.com"
 
 # Plan payments configuration
 PLAN_STRIPE_SECRET_KEY = ""
